# houses

./: .gitignore  Makefile  QUICK_START.md  README.md  househunter_workflow.ipynb  pyproject.toml  start_chrome.sh
data/: user_state.json
data/processed/: derived_fields.json  listings.parquet
scraping/: __init__.py  derive_fields.py  extract_idealista.py  extract_immobiliare.py  fetch_pois.py  gemini.py  llm_utils.py  process_listings.py  process_search_results.py  utils.py
src/backend/: manual_scraper.py  manual_scraper_search.py  utils.py
src/backend/api/: data.py  main.py
src/backend/api/routes/: images.py  listings.py  user_state.py
src/frontend/: index.html  package-lock.json  package.json  vite.config.js
src/frontend/src/: App.jsx
src/frontend/src/api/: listings.js
src/frontend/src/components/: FeatureIcons.jsx  FilterToggle.jsx  Header.jsx  ImageGallery.jsx  Lightbox.jsx  ListingCard.jsx  MapView.jsx  SoldBadge.jsx
src/frontend/src/pages/: ListingDetailPage.jsx  ListingsPage.jsx
