[project]
name = "househunter"
version = "0.2.0"
description = "Local Real Estate Archive & Aggregator (Parquet-based)"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.41.0",
    "beautifulsoup4>=4.12.3",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "jupyter>=1.0.0",
    "openpyxl>=3.1.0",
    "matplotlib>=3.10.8",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
